刪除帳號管理超連結

--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
 
                 <div id="collapseEmp" class="collapse" data-bs-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" asp-area="" asp-controller="Home" asp-action="Privacy">帳號管理</a>
+                        <a class="collapse-item">帳號管理</a>
                         <a class="collapse-item" href="#">權限管理</a>
                     </div>
                 </div>
