--- a/StarProject/Views/Shared/Error.cshtml
+++ b/StarProject/Views/Shared/Error.cshtml
@@ -1,25 +1,22 @@
 ﻿@model ErrorViewModel
 @{
+    Layout = null;
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <link href="~/bootstrapcss/bootstrap.min.css" rel="stylesheet" />
+	<link href="~/css/error.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/home.css">
+	<link href="~/font-awesome/css/all.min.css" rel="stylesheet" />
+    <title>404</title>
+</head>
+<body>
+    <div class="txt404 text-center">4<img class="asteroid bounce-in-top" src="~/img/asteroid.png" />4</div>
+    <div class="txtMessage text-center">完蛋！找不到網頁！</div>
+    <div class="txtMessage text-center">請聯繫網站工程師協助，謝謝！</div>
+    <a asp-area="" asp-controller="Home" asp-action="Index" style="font-size:24px; text-decoration:none; color:#B14940"><i class="fa-solid fa-house"></i>點我回首頁orz</a>
+        
+</body>
+</html>
