--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" asp-area="" asp-controller="Home" asp-action="Privacy">帳號管理</a>
                         <a class="collapse-item" href="#">權限管理</a>
+                        <a class="collapse-item" href="#">人事流程申請</a>
                     </div>
                 </div>
             </li>
