--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- 你的自訂 CSS -->
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/StarProject.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/home.css">
 
@@ -27,6 +26,9 @@
 
     <!-- 動畫 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="icon" type="image/png" href="~/img/logo.png">
+
+    <link href="~/Content/app.css" rel="stylesheet">
 </head>
 
 <body class="d-flex">
@@ -114,7 +116,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="#">官網公告</a>
                         <a class="collapse-item" href="#">知識庫管理</a>
-                        <a class="collapse-item" href="#">遺失物管理</a>
+                        <a class="collapse-item" asp-area="" asp-controller="LostInfo" asp-action="Index">遺失物管理</a>
                         <a class="collapse-item" href="#">觀星景點管理</a>
                     </div>
                 </div>
@@ -363,10 +365,6 @@
                 <!-- 請把網頁內容放在這！！！! -->
                 @RenderBody()
             </div>
-
-
-
-
 
         </main>
 
