--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -373,7 +373,7 @@
                 <div class="copyright text-center my-auto">
                     <span class="dn580px">總機：(03)453-3013 #202</span>
                     <span class="mx-2 dn580px">|</span>
-                    <span class="dn580px">郵件：apollo2025@gmail.com</span>
+                    <span class="dn580px">郵件：apollotw2025@gmail.com</span>
                     <div class="mt-1" style="font-size: 14px;">Copyright &copy; Apollo Astronomical Museum 2025</div>
                 </div>
             </div>
