--- a/StarProject/Views/LostInfo/Create.cshtml
+++ b/StarProject/Views/LostInfo/Create.cshtml
@@ -7,20 +7,17 @@
 <head>
     <style>
         .btn-topbar {
-            --bs-btn-color: #000;
-            --bs-btn-bg: #FFB84C;
-            --bs-btn-border-color: #FFB84C;
-            --bs-btn-hover-color: #000;
-            --bs-btn-hover-bg: #ffca2c;
-            --bs-btn-hover-border-color: #FFB84C;
-            --bs-btn-focus-shadow-rgb: 217, 164, 6;
-            --bs-btn-active-color: #000;
-            --bs-btn-active-bg: #ffcd39;
-            --bs-btn-active-border-color: #FFB84C;
-            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-            --bs-btn-disabled-color: #000;
-            --bs-btn-disabled-bg: #ffc107;
-            --bs-btn-disabled-border-color: #ffc107;
+            --bs-btn-bg: rgb(250, 208, 72);
+			--bs-btn-border-color: rgb(250, 208, 72);
+
+			--bs-btn-hover-bg: rgba(250, 208, 72, 0.692);
+			--bs-btn-hover-border-color: rgba(250, 208, 72, 0.692);
+
+			--bs-btn-focus-shadow-rgb: 217, 164, 6;
+
+			--bs-btn-active-bg: #ffcd39;
+			--bs-btn-active-border-color: #ffc720;
+			--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
         }
 
         .img500px img {
@@ -39,6 +36,22 @@
             align-items: center;
             border: 1px solid #ddd; /* 可選，看框線 */
         }
+
+		.btn-outline-back {
+			--bs-btn-color: #DC3545;
+			--bs-btn-border-color: #DC3545;
+
+			--bs-btn-hover-color: #DC3545;
+			--bs-btn-hover-bg: #f8e6e9;
+			--bs-btn-hover-border-color: #DC3545;
+
+			--bs-btn-focus-shadow-rgb: 255, 193, 7;
+			--bs-btn-active-color: #DC3545;
+			--bs-btn-active-border-color: #DC3545;
+			--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+
+			--bs-gradient: none;
+		}
     </style>
 </head>
 
@@ -97,7 +110,7 @@
                 <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
                     <i class="fa-solid fa-plus me-2"></i>新增
                 </button>
-                <a asp-action="Index" class="btn btn-outline-danger flex-fill fw-bold fs-5">返回列表</a>
+                <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
             </div>
         </form>
 
